# QI_GPU_NW

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  Readme.md  default.yaml  environment.yaml  inspect_model.py  pyproject.toml  setup.py
cli/: qi-align
docs/: architecture.md
docs/theory/: chaining.md  gpu_dp.md  minimizers.md  qi_scoring.md  strobemers.md
docs/usage/: installation.md  running.md  troubleshooting.md
examples/: benchmark_human_chimp.py  example_config.yaml  run_example.sh  test_fasta_1.fa  test_fasta_2.fa  verify_alignment.py
fasta_sequences/: CAJPHU010010681.1.fa  CAJPHU010010681.2.fa  CAJPHU010010683.1.fa  CAJPHU010010697.1.fa  CAJPHU010010701.1.fa  CAJPHU010010702.1.fa  CAJPHU010010728.1.fa  CAJPHU010010730.1.fa  CAJPHU010010745.1.fa  CAJPHU010010746.1.fa  CAJPHU010010755.1.fa  CAJPHU010010757.1.fa  CAJPHU010010764.1.fa  CAJPHU010010768.1.fa  CAJPHU010010769.1.fa  CAJPHU010010775.1.fa  CAJPHU010010777.1.fa  CAJPHU010010783.1.fa  CAJPHU010010790.1.fa  CAJPHU010010791.1.fa  CAJPHU010010800.1.fa  CAJPHU010010802.1.fa  CAJPHU010010805.1.fa  CAJPHU010010818.1.fa  CAJPHU010010824.1.fa  CAJPHU010010827.1.fa  CAJPHU010010833.1.fa  CAJPHU010010844.1.fa  CAJPHU010010847.1.fa  CAJPHU010010880.1.fa  CAJPHU010010886.1.fa  CAJPHU010010891.1.fa  CAJPHU010010895.1.fa  CAJPHU010010901.1.fa  CAJPHU010010903.1.fa  CAJPHU010010905.1.fa  CAJPHU010010906.1.fa  CAJPHU010010910.1.fa  CAJPHU010010924.1.fa  CAJPHU010010928.1.fa  (+405 more)
src/: __init__.py
src/alignment_pipeline/: __init__.py
src/alignment_pipeline/algorithms/: __init__.py  anchor_chaining.py  nw_affine.py  predict_window.py  seed_matcher.py
src/alignment_pipeline/config/: config_loader.py  default_config.yaml
src/qi_align/io/: fasta.py  (+2 more)
tests/: __init__.py  test_alignment.py  test_benchmark.py  test_chaining.py  test_chunker.py  test_chunking.py  test_cigar.py  test_compression.py  test_diagonal_utils.py  test_disk_array.py  test_encoding.py  test_external_sort.py  test_hybrid_align.py  test_integration.py  test_memory_budget.py  test_minimizers.py  test_nw_gpu.py  test_qi_score.py  test_seed_filter.py  test_seed_grouping.py  test_stats.py  test_stitch_global.py  test_stitch_overlap.py  test_strobemers.py
(+87 files in other folders)
